@@ -1,4 +1,4 @@
-RELEASE NOTES, c3p0-0.9.2-pre3
+RELEASE NOTES, c3p0-0.9.2-pre6
 ==============================
 
 Some highlights:
@@ -24,6 +24,10 @@ Some highlights:
 
     -- c3p0 is now actively maintained for deployment as a managed dependency on
        Sonatype's central maven repository
+
+    -- You can use the dataSourceName config parameter to create stable patterns in
+       JMX mBeans, so that you can distinguish your DataSources and monitor then across
+       application restarts.
 
     -- Miscellaneous fixes for bugs/deadlocks/resource-leaks, see CHANGELOG (and many thanks
        to users who've helped track these issues down!)
